



########### install files ###############

install( FILES mirror-both.png mirror-horiz.png mirror-vert.png scaletoheight.png  	scaletowidth.png scaleorig.png ocr.png ocr-select.png newfromselect.png  	thumbviewtile.png gocr.png ocrad.png lockzoom.png  DESTINATION  ${DATA_INSTALL_DIR}/kooka/pics )




#original Makefile.am contents follow:

## Add all of your pixmaps here
#pics_DATA = mirror-both.png mirror-horiz.png mirror-vert.png scaletoheight.png \
#	scaletowidth.png scaleorig.png ocr.png ocr-select.png newfromselect.png \
#	thumbviewtile.png gocr.png ocrad.png lockzoom.png
#
#
## This is where it will all be installed
#picsdir = $(kde_datadir)/kooka/pics
